fix mobile item card centre alignement

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,9 @@ body {
 
 @media (max-width: 375px) {
   .mainLayout {
-    margin: auto 0;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin: 0;
+    margin-top: 24px;
   }
 }
