--- a/src/components/ItemCardContainer/ItemCardContainer.css
+++ b/src/components/ItemCardContainer/ItemCardContainer.css
@@ -35,8 +35,6 @@
 @media (max-width: 375px) {
   .itemCard {
     width: calc(375px - 2*24px);
-    margin-left: 24px;
-    /* margin: 0 auto; */
   }
 
   .itemCard img {
