--- a/src/components/ItemGrid/ItemGrid.css
+++ b/src/components/ItemGrid/ItemGrid.css
@@ -32,7 +32,8 @@
   .cardGrid {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(9, 1fr);
-    margin: auto 0;
+    width: fit-content;
+    margin: 0 auto;
   }
 
   .title {
